assets/scss/styles.scss
@import url(https://fonts.googleapis.com/css?family=Varela+Round);

body {
  margin: 0;
  font-family: 'Varela Round', sans-serif;
  -webkit-font-smoothing: antialiased;
  background: #F2F6F8;
}

a {
  text-decoration: none;
}

#intro {
  background: #B9CFE4;
  color: #fff;
  background-image: url(/images/intro.png);
  background-repeat: repeat-x;
  background-position: center bottom;
  background-size: 100% auto;
  padding-top: 50px;
  padding-bottom: 510px;

  .top {
    text-align: center;

    a {
      height: 66px;
      width: 66px;
      display: inline-block;
      background: url(/images/logo.png) no-repeat center center;
      background-size: contain;
    }

    p {
      width: 100%;
      background: url(/images/title.png) no-repeat center center;
      height: 70px;
      margin: 20px 0 50px 0;
      background-size: 270px auto;
    }
  }

  .left {
    padding: 0 15px;

    img {
      box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.31);
      max-width: 100%;
    }
  }

  .right {
    text-align: center;
    padding: 30px 20px 0;
    margin-bottom: 100px;

    h1 {
      font-size: 24px;
      line-height: 30px;
    }

    p {
      font-size: 14px;
      line-height: 24px;
    }

    a {
      background: #EDCD86;
      color: #fff;
      border-radius: 7px;
      font-size: 16px;
      padding: 16px 11px;
      display: inline-block;
      margin: 20px 0;
    }

    .boost {
      background: url(/images/boost.png) no-repeat center center;
      background-size: contain;
      width: 150px;
      height: 40px;
      display: block;
      position: absolute;
      right: 20px;
    }
  }

  .bottom {
    text-align: center;
    margin: 250px 0 0 0;

    h1 {
      font-size: 24px;
      line-height: 29px;
    }

    a {
      color: #5B72EB;
    }
  }
}

#the-plan {
  text-align: center;
  padding-top: 300px;
  overflow: hidden;

  img {
    position: absolute;
    top: -150px;
    left: -200px;
    width: 700px;
  }

  article {
    background: #fff;
    padding-top: 80px;
    padding-bottom: 100px;
    position: relative;
  }

  h1 {
    font-size: 40px;
    color: #5D6570;
  }

  ul {
    margin: 0 20px;
    padding: 0;
    list-style: none;
    text-align: left;

    li {
      color: #424242;
      font-size: 15px;
      padding-left: 45px;
      margin-bottom: 10px;
      background: url(/images/unchecked.svg) no-repeat left top;
      min-height: 30px;
      padding-top: 5px;

      &.check {
        background-image: url(/images/checked.svg)
      }
    }

    a {
      color: #4A90E2
    }
  }
}

#areas {
  text-align: center;
  padding: 70px 0;

  h1 {
    font-size: 18px;
    color: #53BBB4;
  }

  img {
    max-width: 100%;
    margin-top: 50px;
  }

  a {
    background: #EDCD86;
    color: #fff;
    border-radius: 7px;
    font-size: 16px;
    padding: 16px 11px;
    display: inline-block;
    margin-top: 50px;
  }
}

#copyright {
  background: #fff;
  text-align: center;
  padding-top: 140px;
  padding-bottom: 140px;

  a {
    display: block;
  }

  .by {
    width: 260px;
    margin: 40px auto 0;
    height: 20px;
    background: url(/images/project-by.png) no-repeat center center;
    background-size: contain;
    text-indent: -999999px;
  }

  .logo {
    width: 70px;
    height: 70px;
    display: inline-block;
    background: url(/images/logo.png) no-repeat center center;
    background-size: contain;
    margin-top: 40px;
  }

  .visit {
    color: #5D6570;
    font-size: 24px;
  }

  .social {
    margin-top: 30px;
    opacity: .6;

    a {
      width: 25px;
      height: 20px;
      margin: 0 5px;
      display: inline-block;
      background-repeat: no-repeat;
      background-size: contain;

      &[href*="facebook"] {
        background-image: url(/images/facebook.svg);
      }

      &[href*="twitter"] {
        background-image: url(/images/twitter.svg);
      }

      &[href*="youtube"] {
        background-image: url(/images/youtube.svg);
      }

      &[href*="mail"] {
        background-image: url(/images/newsletter.svg);
      }
    }
  }
}

